fix collapsed

--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -1,18 +1,18 @@
 @import 'bootstrap';
 
 .sidebar {
-  width: 450px;
-  left: -450px;
+  width: 100%;
+  left: -100%;
   padding: 0;
   background-color: $dark;
   z-index: 1051;
-  position: fixed;
+  position: relative;
   top: 0;
   bottom: 0;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100%;
+  // height: calc(var(--vh, 1vh) * 100);
   transition: left 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
-  backface-visibility: hidden;
+  // backface-visibility: hidden;
   border-left: 1px solid rgba($black, 0.05);
 
   &.open {
